@@ -24,7 +24,7 @@
        <td>28</td>
        <td>Lin/???</td>
        <td>LocalTest does not draw landscape until we move backward during
-	 about 2 seconds. Then the landscape is drawn. The SkyBox is
+	 about 2 seconds, then the landscape is drawn. The SkyBox is
          always correctly drawn.</td>
        <td>-</td>
      </tr>
@@ -260,5 +260,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu Feb 12 17:13:34 CET 2009 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri Feb 13 15:30:15 CET 2009 <!-- hhmts end -->
 </body> </html>
