@@ -1,3 +1,9 @@
+2009-02-13 Jerome Pasquier  <rainbru@free.fr>
+	* ogreGui/dialog.cpp (draw): Now handle the geometryDirty flag to
+	avoid a bug when moving a dialog.
+
+	* ogreGui/scrollpane.h : resize() implementation.
+	
 2009-02-12 Jerome Pasquier  <rainbru@free.fr>
 	* ogreGui/messagebox.h : function initWindow() removed.
 
